@@ -1,3 +1,13 @@
+2022-10-04  Jacob Bachmeyer  <jcb@gnu.org>
+
+	PR58065
+
+	* testsuite/runtest.libs/dg.test: Add tests for skipping tests
+	based on special result codes from mock-dg-prune.
+	(mock-dg-test): Add directive for output text.
+	(mock-dg-prune): Recognize special markers for
+	UNRESOLVED/UNSUPPORTED/UNTESTED result codes.
+
 2022-10-01  Jacob Bachmeyer  <jcb@gnu.org>
 
 	PR58065
